--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=>, initial-scale=1.0">
-    <title>Document</title>
+    <title>Git Hub example</title>
     <link rel="stylesheet" href="style.css">
    
 </head>
 <body>
     <h1>
-        Hello Git 
+        Hello Git Hub
     </h1>
     <form>
         <input type = "email" placeholder="Enter your email"/>
