Added link to Netlify

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 </head>
 <body>
     <h1>
-        Hello Git Hub
+        Hosted with
+        <a href="Netlify.com">Netlify</a>
     </h1>
     <form>
         <input type = "email" placeholder="Enter your email"/>
