--- a/index.html
+++ b/index.html
@@ -5,20 +5,27 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=>, initial-scale=1.0">
     <title>Git Hub example</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
    
 </head>
 <body>
+    <div class="cointainer">
     <h1>
         Hosted with
         <a href="Netlify.com">Netlify</a>
     </h1>
+    <a href="jolantastudencka27@gmail.com" class="contact-btn"
+   ><strong>Contact Me</strong></a>
+    
     <form>
         <input type = "email" placeholder="Enter your email"/>
         <input type = "password" placeholder="Enter your password"/>
         <input type= "submit" value="login"/>
     </form>
     <script src="script.js">
+    
+    <div/>
     </script>
 </body>
 </html>
